Главная страница исправлено новая

--- a/source/index.html
+++ b/source/index.html
@@ -38,14 +38,14 @@
     </div>
   </section>
 
-  <section class="description__item__one">
-    <div class="description__item__one__wrapper">
-      <div class="description__offer">
-        <h3 class="description__title">НАСТОЯЩИЙ ГОРОДОК</h3>
-        <span class="description__number number">—№1—</span>
-        <p class="description__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+  <section class="city">
+    <div class="city__wrapper">
+      <div class="city__offer">
+        <h3 class="city__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+        <span class="city__number number">—№1—</span>
+        <p class="city__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
-      <div class="description__item__photo__one">
+      <div class="city__item--photo1">
         <img src="img/city.jpg" width="520" height="260" alt="Домик с садом">
       </div>
     </div>
@@ -70,15 +70,15 @@
     </div>
   </section>
 
-  <section class="description__item__two">
-    <div class="description__item__two__wrapper">
-      <div class="description__item__two__offer">
-        <h3 class="description__item__two__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-        <span class="description__item__two__number">—№2—</span>
-        <p class="description__item__two__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+  <section class="canyon">
+    <div class="canyon__wrapper">
+      <div class="canyon__offer">
+        <h3 class="canyon__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+        <span class="canyon__number number">—№2—</span>
+        <p class="canyon__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
       </div>
-      <div class="description__item__photo__two">
-        <img src="img/city.jpg" width="520" height="260" alt="Каньон">
+      <div class="canyon__item--photo2">
+        <img src="img/canyon.jpg" width="520" height="260" alt="Каньон">
       </div>
     </div>
   </section>
