--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
 <body class="page__body">
 <header class="header">
   <a class="header__logo">
-    <img src="img/logo.png" alt="Логотип седона" width="102" height="84" alt="Логотип">
+    <img src="img/logo.png" width="102" height="84" alt="Логотип">
   </a>
   <nav class="main-nav">
     <div class="main-nav__wrapper">
@@ -15,6 +15,7 @@
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a href="home.html">Главная</a>
+        </li>
         <li class="site-list__item">
           <a href="blank.html">Фото и видео</a>
         </li>
@@ -24,13 +25,12 @@
         <li class="site-list__item">
           <a href="htmlacademy.html">HTML Academy</a>
         </li>
-        </li>
       </ul>
     </div>
   </nav>
 </header>
 <main class="page-main">
-  <img src="img/welcome.png" alt="Welcome" width="282" height="214" alt="Welcome">
+  <img src="img/welcome.png" width="282" height="214" alt="Welcome">
   <section class="description">
     <div class="description__wrapper">
       <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
@@ -40,12 +40,12 @@
 
   <section class="city">
     <div class="city__wrapper">
-      <div class="city__offer">
-        <h3 class="city__title">НАСТОЯЩИЙ ГОРОДОК</h3>
-        <span class="city__number number">—№1—</span>
-        <p class="city__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+      <div class="city__offer city-offer city-offer--blue">
+        <h3 class="city-offer__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+        <span class="city-offer__number number">—№1—</span>
+        <p class="city-offer__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
-      <div class="city__item--photo1">
+      <div class="city-offer__item--photo1">
         <img src="img/city.jpg" width="520" height="260" alt="Домик с садом">
       </div>
     </div>
@@ -54,17 +54,17 @@
   <section class="feature">
     <div class="feature__wrapper">
       <ul class="feature__list">
-        <li class="feature__item">
-          <h3 class="feature__title">ЖИЛЬЁ</h3>
-          <p class="feature__description text">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        <li class="feature__item feature-item">
+          <h3 class="feature-item__title">ЖИЛЬЁ</h3>
+          <p class="feature-item__description">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
-        <li class="feature__item">
-          <h3 class="feature__title">СУВЕНИРЫ</h3>
-          <p class="feature__description text">Сувениры Не только китайского, но и местного производства!</p>
+        <li class="feature__item feature-item">
+          <h3 class="feature-item__title">СУВЕНИРЫ</h3>
+          <p class="feature-item__description">Сувениры Не только китайского, но и местного производства!</p>
         </li>
-        <li class="feature__item">
-          <h3 class="feature__title">ЕДА</h3>
-          <p class="feature__description text">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <li class="feature__item feature-item">
+          <h3 class="feature-item__title">ЕДА</h3>
+          <p class="feature-item__description">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
       </ul>
     </div>
@@ -72,12 +72,12 @@
 
   <section class="canyon">
     <div class="canyon__wrapper">
-      <div class="canyon__offer">
-        <h3 class="canyon__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-        <span class="canyon__number number">—№2—</span>
-        <p class="canyon__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+      <div class="canyon__offer canyon-offer canyon-offer--blue">
+        <h3 class="canyon-offer__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+        <span class="canyon-offer__number number">—№2—</span>
+        <p class="canyon-offer__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
       </div>
-      <div class="canyon__item--photo2">
+      <div class="canyon-offer__item--photo2">
         <img src="img/canyon.jpg" width="520" height="260" alt="Каньон">
       </div>
     </div>
@@ -86,17 +86,17 @@
   <section class="advantages">
     <div class="advantages__wrapper">
       <ul class="advantages__list">
-        <li class="advantages__item">
-          <h3 class="advantages__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-          <span class="advantages__number">—№3—</span>
-          <p class="advantages__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+        <li class="advantages__item advantages-item advantages-item--grey">
+          <h3 class="advantages-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+          <span class="advantages-item__number">—№3—</span>
+          <p class="advantages-item__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages-item--grey">
           <h3 class="advantages__title">КРАСИВАЯ ДОРОГА</h3>
           <span class="advantages__number">—№4—</span>
           <p class="advantages__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages-item--grey">
           <h3 class="advantages__title">МАЛО ТУРИСТОВ</h3>
           <span class="advantages__number">—№5—</span>
           <p class="advantages__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
@@ -130,14 +130,14 @@
     </div>
     <div class="page-footer__social social">
       <ul class="social__list">
-        <li class="social__item">
-          <a href="#" class="social__link social__link--twitter"></a>
+        <li class="social__item social-item">
+          <a href="#" class="social-item__link social-item__link--twitter"></a>
         </li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--facebook"></a>
+        <li class="social__item social-item">
+          <a href="#" class="social-item__link social-item__link--facebook"></a>
         </li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--youtube"></a>
+        <li class="social__item social-item">
+          <a href="#" class="social-item__link social-item__link--youtube"></a>
         </li>
       </ul>
     </div>
