--- a/source/index.html
+++ b/source/index.html
@@ -38,70 +38,61 @@
     </div>
   </section>
 
-  <section class="city">
-    <div class="city__wrapper">
-      <div class="city__offer city-offer city-offer--blue">
-        <h3 class="city-offer__title">НАСТОЯЩИЙ ГОРОДОК</h3>
-        <span class="city-offer__number number">—№1—</span>
-        <p class="city-offer__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+  <section class="advantages">
+    <div class="advantages__wrapper">
+      <div class="advantages__item advantages-item advantages-item--blue">
+        <h3 class="advantages-item__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+        <span class="advantages-item__number">№1</span>
+        <p class="advantages-item__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
-      <div class="city-offer__item--photo1">
-        <img src="img/city.jpg" width="520" height="260" alt="Домик с садом">
-      </div>
+      <img src="img/city.jpg" width="520" height="260" alt="Домик с садом">
     </div>
-  </section>
 
-  <section class="feature">
-    <div class="feature__wrapper">
+    <div class="advantages__wrapper feature">
       <ul class="feature__list">
-        <li class="feature__item feature-item">
+        <li class="feature__item">
           <h3 class="feature-item__title">ЖИЛЬЁ</h3>
           <p class="feature-item__description">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
-        <li class="feature__item feature-item">
+        <li class="feature__item">
           <h3 class="feature-item__title">СУВЕНИРЫ</h3>
           <p class="feature-item__description">Сувениры Не только китайского, но и местного производства!</p>
         </li>
-        <li class="feature__item feature-item">
+        <li class="feature__item">
           <h3 class="feature-item__title">ЕДА</h3>
           <p class="feature-item__description">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
       </ul>
     </div>
-  </section>
 
-  <section class="canyon">
-    <div class="canyon__wrapper">
-      <div class="canyon__offer canyon-offer canyon-offer--blue">
-        <h3 class="canyon-offer__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-        <span class="canyon-offer__number number">—№2—</span>
-        <p class="canyon-offer__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
-      </div>
-      <div class="canyon-offer__item--photo2">
-        <img src="img/canyon.jpg" width="520" height="260" alt="Каньон">
-      </div>
-    </div>
-  </section>
-
-  <section class="advantages">
     <div class="advantages__wrapper">
-      <ul class="advantages__list">
-        <li class="advantages__item advantages-item advantages-item--grey">
-          <h3 class="advantages-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-          <span class="advantages-item__number">—№3—</span>
-          <p class="advantages-item__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
-        </li>
-        <li class="advantages__item advantages-item--grey">
-          <h3 class="advantages__title">КРАСИВАЯ ДОРОГА</h3>
-          <span class="advantages__number">—№4—</span>
-          <p class="advantages__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
-        </li>
-        <li class="advantages__item advantages-item--grey">
-          <h3 class="advantages__title">МАЛО ТУРИСТОВ</h3>
-          <span class="advantages__number">—№5—</span>
-          <p class="advantages__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
-        </li>
-      </ul>
+      <article class="advantages__item advantages-item advantages-item--blue">
+        <h3 class="advantages-item__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+        <span class="advantages-item__number">№2</span>
+        <p class="advantages-item__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+      </article>
+      <img src="img/canyon.jpg" width="520" height="260" alt="Домик с садом">
+    </div>
+
+    <div class="advantages__wrapper">
+      <article class="advantages__item advantages-item">
+        <h3 class="advantages-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+        <span class="advantages-item__number">№3</span>
+        <p class="advantages-item__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+      </article>
+
+      <article class="advantages__item advantages-item">
+        <h3 class="advantages-item__title">КРАСИВАЯ ДОРОГА</h3>
+        <span class="advantages-item__number">№4</span>
+        <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+      </article>
+
+      <article class="advantages__item advantages-item">
+        <h3 class="advantages-item__title">МАЛО ТУРИСТОВ</h3>
+        <span class="advantages-item__number">№5</span>
+        <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+      </article>
+
     </div>
   </section>
 
