--- a/source/form.html
+++ b/source/form.html
@@ -156,7 +156,7 @@
 <footer class="page-footer">
   <div class="page-footer__wrapper">
     <div class="page-footer__contacts contacts">
-      <a class="contacts__title" href="https://htmlacademy.ru">#VISITSEDONA</a>
+      <a class="contacts__title" href="https://htmlacademy.ru">#VISITSEDONA#</a>
     </div>
     <div class="page-footer__social social">
       <ul class="social__list">
