--- a/source/form.html
+++ b/source/form.html
@@ -5,13 +5,13 @@
   <title>Title</title>
 </head>
 <body class="page__body">
-<header class="header">
-  <a class="header__logo">
+<header class="page-header">
+  <a class="page-header__logo">
     <img src="img/logo.png" alt="Логотип седона" width="102" height="84" alt="Логотип">
   </a>
   <nav class="main-nav">
+    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
     <div class="main-nav__wrapper">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a href="home.html">Главная</a>
@@ -43,7 +43,7 @@
   </section>
 
   <section class="sign">
-    <div class="sign_wrapper">
+    <div class="sign__wrapper">
       <h2 class="sign__title">Представьтесь:</h2>
       <form class="sign__form" action="https://echo.htmlacademy.ru" method="post">
         <p class="sign__item">
