--- a/source/index.html
+++ b/source/index.html
@@ -1,154 +1,145 @@
 <!DOCTYPE html>
-<html clas="page" lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body class="page__body">
-    <header class="page-header">
-      <a class="page-header__logo">
-          <img src="img/logo.png" alt="Логотип седона" width="102" height="84" alt="Логотип">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-              <a href="home.html">Главная</a>
-            <li class="site-list__item">
-              <a href="blank.html">Фото и видео</a>
-            </li>
-            <li class="site-list__item">
-              <a href="reviews.html">Форма отзывы</a>
-            </li>
-            <li class="site-list__item">
-              <a href="htmlacademy.html">HTML Academy</a>
-            </li>
-          </li>
-        </ul>
-        <div class="main-nav__list user-list">
-        </div>
+<html class="page" lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body class="page__body">
+<header class="page-header">
+  <a class="page-header__logo">
+    <img src="img/logo.png" alt="Логотип седона" width="102" height="84" alt="Логотип">
+  </a>
+  <nav class="main-nav">
+    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a href="home.html">Главная</a>
+        <li class="site-list__item">
+          <a href="blank.html">Фото и видео</a>
+        </li>
+        <li class="site-list__item">
+          <a href="reviews.html">Форма отзывы</a>
+        </li>
+        <li class="site-list__item">
+          <a href="htmlacademy.html">HTML Academy</a>
+        </li>
+        </li>
+      </ul>
+      <div class="main-nav__list user-list">
       </div>
-      </nav>
-    </header>
-    <main class="page-main">
-      <img src="img/welcome.png" alt="Welcome" width="282" height="214" alt="Welcome">
-      <section class="description">
-      <div class="description__wrapper">
-        <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ<br> ГОРОДОК В АРИЗОНЕ,<br> ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
-          <p class="description__text text">Рассмотрим 5 причин, по которым <br>Седона круче, чем гранд каньон!</p>
-      </div>
-    </section>
+    </div>
+  </nav>
+</header>
+<main class="page-main">
+  <img src="img/welcome.png" alt="Welcome" width="282" height="214" alt="Welcome">
+  <section class="description">
+    <div class="description__wrapper">
+      <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ<br> ГОРОДОК В АРИЗОНЕ,<br> ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
+      <p class="description__text text">Рассмотрим 5 причин, по которым <br>Седона круче, чем гранд каньон!</p>
+    </div>
+  </section>
 
-    <section class="description__item__one">
-        <div class="description__item__one__wrapper">
-          <div class="description__offer">
-          <h3 class="description__title title">НАСТОЯЩИЙ <br>ГОРОДОК</h3>
-            <span class="description__number number">—№1—</span>
-              <p class="description__text text">Седона - не аттракцион для туристов, <br>там течёт своя жизнь</p>
-            </div>
-      <div class="description__item__photo__one">
+  <section class="advantages">
+    <div class="advantages__wrapper">
+      <div class="advantages__item advantages-item advantages-item--blue">
+        <h3 class="advantages-item__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+        <span class="advantages-item__number">№1</span>
+        <p class="advantages-item__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+      </div>
       <img src="img/city.jpg" width="520" height="260" alt="Домик с садом">
-      </div>
-        </div>
-    </section>
+    </div>
 
-    <section class="feature">
-      <div class="feature__wrapper">
+    <div class="advantages__wrapper feature">
       <ul class="feature__list">
-        <li class="feature__item feature__item--house">
-          <h3 class="feature__title title">ЖИЛЬЁ</h3>
-            <p class="feature__description text">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        <li class="feature__item">
+          <h3 class="feature-item__title">ЖИЛЬЁ</h3>
+          <p class="feature-item__description">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
-        <li class="feature__item feature__item--souvenir">
-          <h3 class="feature__title title">СУВЕНИРЫ</h3>
-            <p class="feature__description text">Сувениры Не только китайского, но и местного производства!</p>
+        <li class="feature__item">
+          <h3 class="feature-item__title">СУВЕНИРЫ</h3>
+          <p class="feature-item__description">Сувениры Не только китайского, но и местного производства!</p>
         </li>
-        <li class="feature__item feature__item--food">
-          <h3 class="feature__title title">ЕДА</h3>
-            <p class="feature__description text">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-      </ul>
-    </div>
-    </section>
-
-    <section class="description__item__two">
-        <div class="description__item__two__wrapper">
-          <div class="description__offer">
-          <h3 class="description__title title">ТАМ ЕСТЬ <br>МОСТ ДЬЯВОЛА</h3>
-            <span class="description__number number">—№2—</span>
-              <p class="description__text text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО <br>ВЫ ОСМЕЛИТЕСЬ</p>
-            </div>
-      <div class="description__item__photo__two">
-      <img src="img/city.jpg" width="520" height="260" alt="Каньон">
-      </div>
-    </div>
-    </section>
-
-    <section class="advantages">
-      <div class="advantages__wrapper">
-      <ul class="advantages__list">
-        <li class="advantages__item">
-          <h3 class="advantages__title title">НЕБОЛЬШАЯ <br>ПЛОЩАДЬ</h3>
-          <span class="advantages__number number">—№3—</span>
-          <p class="advantages__text text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ <br>НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title title">КРАСИВАЯ <br>ДОРОГА</h3>
-          <span class="advantages__number number">—№4—</span>
-            <p class="advantages__text text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ <br>НЕ СКУЧНО!</p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title title">МАЛО ТУРИСТОВ</h3>
-          <span class="advantages__number number">—№5—</span>
-            <p class="advantages__text text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ <br>НЕ СКУЧНО!</p>
+        <li class="feature__item">
+          <h3 class="feature-item__title">ЕДА</h3>
+          <p class="feature-item__description">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
       </ul>
     </div>
-    </section>
 
-    <section class="interest">
-      <div class="interest__wrapper">
-        <div class="interest__offer">
-      <h2 class="interest__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+    <div class="advantages__wrapper">
+      <article class="advantages__item advantages-item advantages-item--blue">
+        <h3 class="advantages-item__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+        <span class="advantages-item__number">№2</span>
+        <p class="advantages-item__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+      </article>
+      <img src="img/canyon.jpg" width="520" height="260" alt="Домик с садом">
+    </div>
+
+    <div class="advantages__wrapper">
+      <article class="advantages__item advantages-item">
+        <h3 class="advantages-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+        <span class="advantages-item__number">№3</span>
+        <p class="advantages-item__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+      </article>
+
+      <article class="advantages__item advantages-item">
+        <h3 class="advantages-item__title">КРАСИВАЯ ДОРОГА</h3>
+        <span class="advantages-item__number">№4</span>
+        <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+      </article>
+
+      <article class="advantages__item advantages-item">
+        <h3 class="advantages-item__title">МАЛО ТУРИСТОВ</h3>
+        <span class="advantages-item__number">№5</span>
+        <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+      </article>
+
+    </div>
+  </section>
+
+  <section class="interest">
+    <div class="interest__wrapper">
+      <div class="interest__offer">
+        <h2 class="interest__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
         <p class="interest__text text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, <br>
           и мы ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
-        </div>
-            <div class="interest__button">
-          <a class="btn-search" href="№">Поиск гостиницы в Седоне</a>
-            </div>
-        </div>
-
-          <iframe class="interest__map-iframe"></iframe> <!--Потом вставлю код-->
-          <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150" alt="Седона. Аризона">
-    </section>
-    </main>
-
-      <footer class="page-footer">
-        <div class="page-footer__wrapper">
-          <div class="page-footer__contacts contacts">
-        <a class="contacts__title" href="https://htmlacademy.ru">#VISITSEDONA#</a>
-        </div>
-        <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-                <a href="#" class="social__link social__link--twitter"</a>
-          </li>
-          <li class="social__item">
-                <a href="#" class="social__link social__link--facebook"</a>
-          </li>
-          <li class="social__item">
-                <a href="#" class="social__link social__link--youtube"</a>
-          </li>
-        </ul>
       </div>
-      <div class="page-footer__copyright copyright">
-        <span class="copyright__text">Разработано</span>
-          <a class="copyright__link" href="https://htmlacademy.ru/study">
+      <div class="interest__button">
+        <a class="btn-search" href="№">Поиск гостиницы в Седоне</a>
+      </div>
+    </div>
+
+    <iframe class="interest__map-iframe"></iframe> <!--Потом вставлю код-->
+    <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150" alt="Седона. Аризона">
+  </section>
+</main>
+
+<footer class="page-footer">
+  <div class="page-footer__wrapper">
+    <div class="page-footer__contacts contacts">
+      <a class="contacts__title" href="https://htmlacademy.ru">#VISITSEDONA#</a>
+    </div>
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a href="#" class="social__link social__link--twitter"</a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--facebook"</a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--youtube"</a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <span class="copyright__text">Разработано</span>
+      <a class="copyright__link" href="https://htmlacademy.ru/study">
         <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34" alt="Логотип-футер">
-          </a>
-      </div>
-          </div>
-      </footer>
-  </body>
+      </a>
+    </div>
+  </div>
+</footer>
+</body>
 </html>
