--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,8 @@
     </div>
 
     <iframe class="interest__map-iframe"></iframe> <!--Потом вставлю код-->
-    <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150" alt="Седона. Аризона">
+    <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150"
+         alt="Седона. Аризона">
   </section>
 </main>
 
