--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
 <body class="page__body">
 <header class="page-header">
   <a class="page-header__logo">
-    <img src="img/logo.png" alt="Логотип седона" width="102" height="84" alt="Логотип">
+    <img alt="Логотип седона" alt="Логотип" height="84" src="img/logo.png" width="102">
   </a>
   <nav class="main-nav">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
@@ -32,7 +32,7 @@
   </nav>
 </header>
 <main class="page-main">
-  <img src="img/welcome.png" alt="Welcome" width="282" height="214" alt="Welcome">
+  <img alt="Welcome" alt="Welcome" height="214" src="img/welcome.png" width="282">
 
   <section class="reviews__title reviews">
     <div class="reviews__wrapper">
@@ -45,14 +45,14 @@
   <section class="sign">
     <div class="sign__wrapper">
       <h2 class="sign__title">Представьтесь:</h2>
-      <form class="sign__form" action="https://echo.htmlacademy.ru" method="post">
+      <form action="https://echo.htmlacademy.ru" class="sign__form" method="post">
         <p class="sign__item">
           <label for="sign__name">Имя*</label>
-          <input id="sign__name" type="text" name="name" placeholder="Петр">
+          <input id="sign__name" name="name" placeholder="Петр" type="text">
         </p>
         <p class="sign__item">
           <label for="sign__family">Фамилия*</label>
-          <input id="sign__family" type="text" name="family" placeholder="Иванов">
+          <input id="sign__family" name="family" placeholder="Иванов" type="text">
         </p>
         <p class="sign__item">
           <label for="sign__middle">Отчество*</label>
@@ -82,17 +82,17 @@
         <legend class="filter-impression__title">Ваше общее впечатление:</legend>
         <ul class="filter-impression__list">
           <li class="filter-impression__option">
-            <input class="filter-impression__emotions" type="radio" name="emotion" value="positive" id="filter-shave"
-                   checked>
+            <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio"
+                   value="positive">
             <label class="filter-impression__positive">Скорее положительное</label>
           </li>
           <li class="filter-impression__option">
-            <input class="filter-impression__emotions" type="radio" name="emotion" value="negative" id="filter-care">
+            <input class="filter-impression__emotions" id="filter-care" name="emotion" type="radio" value="negative">
             <label class="filter-impression__negative">Скорее отрицательное</label>
           </li>
           <li class="filter-impression__option">
-            <input class="filter-impression__emotions" type="radio" name="emotion" value="average"
-                   id="filter-accessories">
+            <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio"
+                   value="average">
             <label class="filter-impression__average">Затрудняюсь ответить</label>
           </li>
         </ul>
@@ -104,15 +104,15 @@
     <div class="filter-attractions__wrapper">
       <fieldset class="filter-attractions__checkboxes">
         <legend class="filter-attractions__title">Посещенные достопримечательности:</legend>
-        <input id="devil" type="checkbox" checked>
+        <input checked id="devil" type="checkbox">
         <label for="devil">
           Мост Дьявола
         </label>
-        <input id="mountain" type="checkbox" checked>
+        <input checked id="mountain" type="checkbox">
         <label for="mountain">
           Гора-Колокол
         </label>
-        <input id="park" type="checkbox" checked>
+        <input checked id="park" type="checkbox">
         <label for="park">
           Слайд-парк
         </label>
@@ -161,20 +161,20 @@
     <div class="page-footer__social social">
       <ul class="social__list">
         <li class="social__item">
-          <a href="#" class="social__link social__link--twitter"</a>
+          <a class="social__link social__link--twitter" href="#"</a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link social__link--facebook"</a>
+          <a class="social__link social__link--facebook" href="#"</a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link social__link--youtube"</a>
+          <a class="social__link social__link--youtube" href="#"</a>
         </li>
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
       <span class="copyright__text">Разработано</span>
       <a class="copyright__link" href="https://htmlacademy.ru/study">
-        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34" alt="Логотип-футер">
+        <img alt="htmlacademy" alt="Логотип-футер" height="34" src="img/footer-logo.png" width="27">
       </a>
     </div>
   </div>
