--- a/source/form.html
+++ b/source/form.html
@@ -153,31 +153,32 @@
   </section>
 </main>
 
-<footer class="page-footer">
-  <div class="page-footer__wrapper">
-    <div class="page-footer__contacts contacts">
-      <a class="contacts__title" href="https://htmlacademy.ru">#VISITSEDONA#</a>
+<footer class="footer">
+  <div class="footer__wrapper">
+    <div class="footer__contacts">
+      <a class="footer__link" href="https://htmlacademy.ru">#VISITSEDONA</a>
     </div>
-    <div class="page-footer__social social">
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--twitter" href="#"</a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="#"</a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--youtube" href="#"</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page-footer__copyright copyright">
+
+    <ul class="social footer__social">
+      <li class="social__item">
+        <a href="#" class="social__link"></a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link"></a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link"></a>
+      </li>
+    </ul>
+
+    <div class="footer__copyright">
       <span class="copyright__text">Разработано</span>
       <a class="copyright__link" href="https://htmlacademy.ru/study">
-        <img alt="htmlacademy" alt="Логотип-футер" height="34" src="img/footer-logo.png" width="27">
+        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34" alt="Логотип-футер">
       </a>
     </div>
   </div>
 </footer>
+
 </body>
 </html>
