--- a/source/index.html
+++ b/source/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
 </head>
 <body class="page__body">
-<header class="page-header">
-  <a class="page-header__logo">
-    <img src="img/logo.png" alt="Логотип седона" width="102" height="84" alt="Логотип">
+<header class="header">
+  <a class="header__logo">
+    <img src="img/logo.png" width="102" height="84" alt="Логотип">
   </a>
   <nav class="main-nav">
-    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
     <div class="main-nav__wrapper">
+      <button class="main-nav__toggle" type="button">
+        <!--Здесь будет SVG иконка-->
+      </button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a href="home.html">Главная</a>
+        </li>
         <li class="site-list__item">
           <a href="blank.html">Фото и видео</a>
         </li>
@@ -24,19 +27,16 @@
         <li class="site-list__item">
           <a href="htmlacademy.html">HTML Academy</a>
         </li>
-        </li>
       </ul>
-      <div class="main-nav__list user-list">
-      </div>
     </div>
   </nav>
 </header>
 <main class="page-main">
-  <img src="img/welcome.png" alt="Welcome" width="282" height="214" alt="Welcome">
+  <img src="img/welcome.png" width="282" height="214" alt="Welcome">
   <section class="description">
     <div class="description__wrapper">
-      <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ<br> ГОРОДОК В АРИЗОНЕ,<br> ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
-      <p class="description__text text">Рассмотрим 5 причин, по которым <br>Седона круче, чем гранд каньон!</p>
+      <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
+      <p class="description__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
   </section>
 
@@ -102,7 +102,7 @@
     <div class="interest__wrapper">
       <div class="interest__offer">
         <h2 class="interest__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-        <p class="interest__text text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, <br>
+        <p class="interest__text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, <br>
           и мы ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
       </div>
       <div class="interest__button">
@@ -111,30 +111,29 @@
     </div>
 
     <iframe class="interest__map-iframe"></iframe> <!--Потом вставлю код-->
-    <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150"
-         alt="Седона. Аризона">
+    <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150" alt="Седона. Аризона">
   </section>
 </main>
 
-<footer class="page-footer">
-  <div class="page-footer__wrapper">
-    <div class="page-footer__contacts contacts">
-      <a class="contacts__title" href="https://htmlacademy.ru">#VISITSEDONA#</a>
+<footer class="footer">
+  <div class="footer__wrapper">
+    <div class="footer__contacts">
+      <a class="footer__link" href="https://htmlacademy.ru">#VISITSEDONA</a>
     </div>
-    <div class="page-footer__social social">
-      <ul class="social__list">
-        <li class="social__item">
-          <a href="#" class="social__link social__link--twitter"</a>
-        </li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--facebook"</a>
-        </li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--youtube"</a>
-        </li>
-      </ul>
-    </div>
-    <div class="page-footer__copyright copyright">
+
+    <ul class="social footer__social">
+      <li class="social__item">
+        <a href="#" class="social__link"></a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link"></a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link"></a>
+      </li>
+    </ul>
+
+    <div class="footer__copyright">
       <span class="copyright__text">Разработано</span>
       <a class="copyright__link" href="https://htmlacademy.ru/study">
         <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34" alt="Логотип-футер">
@@ -142,5 +141,6 @@
     </div>
   </div>
 </footer>
+
 </body>
 </html>
