--- a/source/index.html
+++ b/source/index.html
@@ -136,7 +136,7 @@
     <div class="footer__copyright">
       <span class="copyright__text">Разработано</span>
       <a class="copyright__link" href="https://htmlacademy.ru/study">
-        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34" alt="Логотип-футер">
+        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
       </a>
     </div>
   </div>
