--- a/source/form.html
+++ b/source/form.html
@@ -5,16 +5,19 @@
   <title>Title</title>
 </head>
 <body class="page__body">
-<header class="page-header">
-  <a class="page-header__logo">
-    <img alt="Логотип седона" alt="Логотип" height="84" src="img/logo.png" width="102">
+<header class="header">
+  <a class="header__logo">
+    <img src="img/logo.png" width="102" height="84" alt="Логотип">
   </a>
   <nav class="main-nav">
-    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</button>
     <div class="main-nav__wrapper">
+      <button class="main-nav__toggle" type="button">
+        <!--Здесь будет SVG иконка-->
+      </button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
           <a href="home.html">Главная</a>
+        </li>
         <li class="site-list__item">
           <a href="blank.html">Фото и видео</a>
         </li>
@@ -24,61 +27,54 @@
         <li class="site-list__item">
           <a href="htmlacademy.html">HTML Academy</a>
         </li>
-        </li>
       </ul>
-      <div class="main-nav__list user-list">
-      </div>
     </div>
   </nav>
 </header>
 <main class="page-main">
-  <img alt="Welcome" alt="Welcome" height="214" src="img/welcome.png" width="282">
+  <img alt="Welcome" height="214" src="img/welcome.png" width="282">
 
   <section class="reviews__title reviews">
     <div class="reviews__wrapper">
       <h2 class="reviews__slogan">Оставьте свой отзыв</h2>
-      <p class="reviews__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а также о<br>
-        Посещенных вам<br>Достопримечательностях</p>
+      <p class="reviews__text">Помогите нашим отелям стать лучше!Оставьте отзыв о них, а также о
+        посещенных вам достопримечательностях</p>
     </div>
   </section>
 
-  <section class="sign">
-    <div class="sign__wrapper">
-      <h2 class="sign__title">Представьтесь:</h2>
-      <form action="https://echo.htmlacademy.ru" class="sign__form" method="post">
-        <p class="sign__item">
-          <label for="sign__name">Имя*</label>
-          <input id="sign__name" name="name" placeholder="Петр" type="text">
-        </p>
-        <p class="sign__item">
-          <label for="sign__family">Фамилия*</label>
-          <input id="sign__family" name="family" placeholder="Иванов" type="text">
-        </p>
-        <p class="sign__item">
-          <label for="sign__middle">Отчество*</label>
-          <input id="sign__middle" name="middle" placeholder="Александрович" type="text">
-        </p>
-      </form>
-    </div>
-  </section>
 
-  <section class="contacts-info">
-    <div class="contacts-info__wrapper">
-      <h2 class="contacts-info__title">Контактная информация:</h2>
-      <p class="contacts-info__item">
+<form class="page-form">
+  <fieldset class="sign">
+    <legend class="sign__title">Представьтесь:</legend>
+    <form action="https://echo.htmlacademy.ru" class="sign__form" method="post">
+      <div class="sign__item">
+        <label for="sign__name">Имя*</label>
+        <input id="sign__name" name="name" placeholder="Петр" type="text">
+      </div>
+      <div class="sign__item">
+        <label for="sign__family">Фамилия*</label>
+        <input id="sign__family" name="family" placeholder="Иванов" type="text">
+      </div>
+      <div class="sign__item">
+        <label for="sign__middle">Отчество*</label>
+        <input id="sign__middle" name="middle" placeholder="Александрович" type="text">
+      </div>
+    </form>
+  </fieldset>
+
+  <fieldset class="contacts-info">
+      <legend class="contacts-info__title">Контактная информация:</legend>
+      <div class="contacts-info__item">
         <label for="contacts-info__phone">Контактный телефон*</label>
         <input id="contacts-info__phone" name="phone" placeholder="Введите телефон" type="text">
-      </p>
-      <p class="contacts-info__item">
+      </div>
+      <div class="contacts-info__item">
         <label for="contacts-info__email">Электронная почта*</label>
         <input id="contacts-info__email" name="e-mail" placeholder="Введите e-mail" type="text">
-      </p>
-    </div>
-  </section>
+      </div>
+  </fieldset>
 
-  <section class="filter-impression">
-    <div class="filter-impression__wrapper">
-      <fieldset>
+  <fieldset class="filter-impression">
         <legend class="filter-impression__title">Ваше общее впечатление:</legend>
         <ul class="filter-impression__list">
           <li class="filter-impression__option">
@@ -96,13 +92,9 @@
             <label class="filter-impression__average">Затрудняюсь ответить</label>
           </li>
         </ul>
-      </fieldset>
-    </div>
-  </section>
+  </fieldset>
 
-  <section class="filter-attractions">
-    <div class="filter-attractions__wrapper">
-      <fieldset class="filter-attractions__checkboxes">
+  <fieldset class="filter-attractions">
         <legend class="filter-attractions__title">Посещенные достопримечательности:</legend>
         <input checked id="devil" type="checkbox">
         <label for="devil">
@@ -120,37 +112,14 @@
         <label for="rocks">
           Красные скалы
         </label>
-      </fieldset>
-    </div>
-  </section>
+  </fieldset>
 
-  <section class="failure-modal-window-hidden">
-    <div class="failure-modal-window-hidden__wrapper">
-      <h2 class="failure-modal-window-hidden__title">Что-то пошло не так!</h2>
-      <p class="failure-modal-window-hidden__text">Проверьте поля, выделенные<br>красным, скорее всего вы<br>
-        забыли их заполнить</p>
-      <button class="failure-modal-window-hidden__button">ок</button>
-    </div>
-  </section>
-
-  <section class="emotion-form">
-    <div class="emotion-form__wrapper">
-      <li class="emotion-form__item">
-        <label class="emotion-form__title">Опишите свои эмоции:</label>
+  <fieldset class="emotion-form">
+        <legend class="emotion-form__title">Опишите свои эмоции:</legend>
         <textarea name="emotion-form__text">Опишите подробно все свои восторги</textarea>
-      </li>
-      <p><input type="submit" value="Отправить отзыв"></p>
-    </div>
-  </section>
-
-  <section class="success-modal-window-hidden">
-    <div class="success-modal-window-hidden__wrapper">
-      <h2 class="success-modal-window-hidden__title">Ваш отзыв отправлен!</h2>
-      <p class="success-modal-window-hidden__text">Спасибо за ваше участие, ваш<br>отзыв уже поступил к нам.<br>
-        В ближайшее время мы<br>опубликуем его на сайте.</p>
-      <button class="success-modal-window-hidden__button">Закрыть окно</button>
-    </div>
-  </section>
+      <button type="submit">Отправить отзыв</button>
+  </fieldset>
+</form>
 </main>
 
 <footer class="footer">
@@ -174,11 +143,29 @@
     <div class="footer__copyright">
       <span class="copyright__text">Разработано</span>
       <a class="copyright__link" href="https://htmlacademy.ru/study">
-        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34" alt="Логотип-футер">
+        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
       </a>
     </div>
   </div>
 </footer>
+
+<section class="failure-modal-window-hidden">
+  <div class="failure-modal-window-hidden__wrapper">
+    <h2 class="failure-modal-window-hidden__title">Что-то пошло не так!</h2>
+    <p class="failure-modal-window-hidden__text">Проверьте поля, выделенные красным, скорее всего вы
+      забыли их заполнить</p>
+    <button class="failure-modal-window-hidden__button">ок</button>
+  </div>
+</section>
+
+<section class="success-modal-window-hidden">
+  <div class="success-modal-window-hidden__wrapper">
+    <h2 class="success-modal-window-hidden__title">Ваш отзыв отправлен!</h2>
+    <p class="success-modal-window-hidden__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+      В ближайшее время мы опубликуем его на сайте.
+    <button class="success-modal-window-hidden__button">Закрыть окно</button>
+  </div>
+</section>
 
 </body>
 </html>
