--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
   </a>
   <nav class="main-nav">
     <div class="main-nav__wrapper">
-      <button class="main-nav__toggle" type="button">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
         <!--Здесь будет SVG иконка-->
       </button>
       <ul class="main-nav__list site-list">
