--- a/source/index.html
+++ b/source/index.html
@@ -106,7 +106,7 @@
           и мы ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
       </div>
       <div class="interest__button">
-        <a class="btn-search" href="#">Поиск гостиницы в Седоне</a>
+        <a class="btn-search" href="#">Найти гостиницу</a>
       </div>
     </div>
 
