Sass главная доработки

--- a/source/form.html
+++ b/source/form.html
@@ -42,8 +42,6 @@
     </div>
   </section>
 
-
-  <<<<<<< HEAD
   <form class="page-form">
     <fieldset class="sign">
       <legend class="sign__title">Представьтесь:</legend>
@@ -85,7 +83,6 @@
         </fieldset>
 
         <fieldset class="contacts-info">
-          >>>>>>> bceccb6bc1b973e943b5dbe84ab4f7d6794977a5
           <legend class="contacts-info__title">Контактная информация:</legend>
           <div class="contacts-info__item">
             <label for="contacts-info__phone">Контактный телефон*</label>
@@ -95,7 +92,6 @@
             <label for="contacts-info__email">Электронная почта*</label>
             <input id="contacts-info__email" name="e-mail" placeholder="Введите e-mail" type="text">
           </div>
-          <<<<<<< HEAD
         </fieldset>
 
         <fieldset class="filter-impression">
@@ -144,7 +140,6 @@
           <button type="submit">Отправить отзыв</button>
         </fieldset>
       </form>
-      =======
     </fieldset>
 
     <fieldset class="filter-impression">
@@ -193,7 +188,6 @@
       <button type="submit">Отправить отзыв</button>
     </fieldset>
   </form>
-  >>>>>>> bceccb6bc1b973e943b5dbe84ab4f7d6794977a5
 </main>
 
 <footer class="footer">
@@ -236,12 +230,8 @@
   <div class="success-modal-window-hidden__wrapper">
     <h2 class="success-modal-window-hidden__title">Ваш отзыв отправлен!</h2>
     <p class="success-modal-window-hidden__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
-      В ближайшее время мы опубликуем его на сайте.
-      <<<<<<< HEAD
-      <button class="success-modal-window-hidden__button">Закрыть окно</button>
-      =======
-      <button class="success-modal-window-hidden__button">Закрыть окно</button>
-      >>>>>>> bceccb6bc1b973e943b5dbe84ab4f7d6794977a5
+      В ближайшее время мы опубликуем его на сайте.</p>
+    <button class="success-modal-window-hidden__button">Закрыть окно</button>
   </div>
 </section>
 
