Sass главная доработки

--- a/source/form.html
+++ b/source/form.html
@@ -98,8 +98,7 @@
           <legend class="filter-impression__title">Ваше общее впечатление:</legend>
           <ul class="filter-impression__list">
             <li class="filter-impression__option">
-              <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio"
-                     value="positive">
+              <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio" value="positive">
               <label class="filter-impression__positive">Скорее положительное</label>
             </li>
             <li class="filter-impression__option">
@@ -107,8 +106,7 @@
               <label class="filter-impression__negative">Скорее отрицательное</label>
             </li>
             <li class="filter-impression__option">
-              <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio"
-                     value="average">
+              <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio" value="average">
               <label class="filter-impression__average">Затрудняюсь ответить</label>
             </li>
           </ul>
@@ -146,8 +144,7 @@
       <legend class="filter-impression__title">Ваше общее впечатление:</legend>
       <ul class="filter-impression__list">
         <li class="filter-impression__option">
-          <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio"
-                 value="positive">
+          <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio" value="positive">
           <label class="filter-impression__positive">Скорее положительное</label>
         </li>
         <li class="filter-impression__option">
@@ -155,8 +152,7 @@
           <label class="filter-impression__negative">Скорее отрицательное</label>
         </li>
         <li class="filter-impression__option">
-          <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio"
-                 value="average">
+          <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio" value="average">
           <label class="filter-impression__average">Затрудняюсь ответить</label>
         </li>
       </ul>
